# CNet

./: CMakeLists.txt  README.md  doxy  main.c
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/: annotated.html  annotated_dup.js  classes.html  cnet_8h.html  cnet_8h.js  cnet_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  examples_2example_server_8cpp-example.html  files.html  functions.html  functions_vars.html  globals.html  globals_8h.html  globals_8h_source.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  navtreedata.js  navtreeindex0.js  struct_c_n__socket__object.html  struct_c_net__server.html  struct_c_net__server.js  struct_c_net__server_structure.html  struct_c_net__server_structure.js  struct_c_net__socket__instance.html  struct_c_net__socket__instance.js  struct_c_net__socket__object.html  structsocket__operations.html
docs/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  functions.html  globals.html  globals_type.html  menudata.js
docs/html/search/: all_3.js  all_4.js  functions_0.js  variables_1.js
docs/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_3.js
include/: cnet.h  globals.h
src/: cnet.c  globals.c
